--- a/src/LagoVista.UserAdmin.Repos/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Repos/Package.nuspec
@@ -14,6 +14,7 @@
     <tags>HomeAutomation IoT</tags>
     <dependencies>
       <dependency id="Newtonsoft.Json" version="10.0.1" />
+      <dependency id="LagoVista.CloudStorage" version="0.8.120-alpha01149" />
     </dependencies>
   </metadata>
   <files>
