--- a/src/LagoVista.UserAdmin/Package.nuspec
+++ b/src/LagoVista.UserAdmin/Package.nuspec
@@ -13,6 +13,8 @@
     <copyright>Copyright 2016</copyright>
     <tags>HomeAutomation IoT</tags>
     <dependencies>
+      <dependency id="LagoVista.Core" version="0.8.120-alpha01118" />
+      <dependency id="LagoVista.Authentication" version="0.8.120-alpha01118" />
       <dependency id="Newtonsoft.Json" version="10.0.1" />
     </dependencies>
   </metadata>
