--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -14,6 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.0" />
     <PackageReference Include="Twilio" Version="5.2.1-alpha1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
