--- a/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
+++ b/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
@@ -8,6 +8,7 @@
   <ItemGroup>
     <PackageReference Include="LagoVista.Core" Version="0.8.120-alpha01118" />
     <PackageReference Include="LagoVista.Core.Authentication" Version="0.8.120-alpha01118" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.0" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
   </ItemGroup>
 
