--- a/src/LagoVista.UserAdmin/Package.nuspec
+++ b/src/LagoVista.UserAdmin/Package.nuspec
@@ -15,7 +15,7 @@
     <dependencies>
       <dependency id="LagoVista.Core" version="0.8.120-alpha01118" />
       <dependency id="LagoVista.Authentication" version="0.8.120-alpha01118" />
-      <dependency id="Newtonsoft.Json" version="10.0.1" />
+      <dependency id="Microsoft.DependencyInjection.Abstractions" version="1.1.0" />
     </dependencies>
   </metadata>
   <files>
