--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -1,34 +1,28 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.0" />
     <PackageReference Include="Twilio" Version="5.3.1-alpha1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="MailKit" Version="1.16.0" />
-    <PackageReference Include="LagoVista.Core" Version="0.8.146-alpha01178" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="0.8.146-alpha01178" />
+    <PackageReference Include="LagoVista.Core" Version="0.8.151-alpha1547" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="0.8.151-alpha1547" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.UserAdmin\LagoVista.UserAdmin.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <None Update="T4ResourceGenerator.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>T4ResourceGenerator.cs</LastGenOutput>
     </None>
   </ItemGroup>
-
   <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
-
   <ItemGroup>
     <Compile Update="T4ResourceGenerator.cs">
       <DesignTime>True</DesignTime>
