--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -3,13 +3,14 @@
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.1" />
     <PackageReference Include="Twilio" Version="5.3.1-alpha1" />
-    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
-    <PackageReference Include="MailKit" Version="1.16.0" />
-    <PackageReference Include="LagoVista.Core" Version="0.8.176-alpha1628" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="0.8.176-alpha1628" />
+    <PackageReference Include="MailKit" Version="1.16.1" />
+    <PackageReference Include="LagoVista.Core" Version="0.8.180-alpha1517" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="0.8.180-alpha1517" />
+    <PackageReference Include="WindowsAzure.Storage" Version="8.1.3" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.UserAdmin\LagoVista.UserAdmin.csproj" />
