--- a/nuget.config
+++ b/nuget.config
@@ -1,12 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
     <!-- remove any machine-wide sources with <clear/> -->
     <clear />
-    <!-- also get packages from the NuGet Gallery -->
+    <add key="Local Public" value="D:\nuviot\LocalPackages" />
     <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
+  <disabledPackageSources>
+    <add key="VSTS Private Packages" value="true" />
+  </disabledPackageSources>
 </configuration>
