--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -3,14 +3,15 @@
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.24-alpha0937" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.1" />
-    <PackageReference Include="Twilio" Version="5.3.1-alpha1" />
+    <PackageReference Include="Twilio" Version="5.5.1-alpha1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="MailKit" Version="1.16.1" />
-    <PackageReference Include="LagoVista.Core" Version="0.8.189-alpha1138" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="0.8.189-alpha1138" />
-    <PackageReference Include="WindowsAzure.Storage" Version="8.1.3" />
+    <PackageReference Include="LagoVista.Core" Version="1.2.24-alpha0937" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.24-alpha0937" />
+    <PackageReference Include="WindowsAzure.Storage" Version="8.1.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.UserAdmin\LagoVista.UserAdmin.csproj" />
