--- a/src/LagoVista.UserAdmin.Repos/LagoVista.UserAdmin.Repos.csproj
+++ b/src/LagoVista.UserAdmin.Repos/LagoVista.UserAdmin.Repos.csproj
@@ -3,12 +3,16 @@
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.CloudStorage" Version="0.8.189-alpha1138" />
+    <PackageReference Include="LagoVista.CloudStorage" Version="1.2.24-alpha0937" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.24-alpha0937" />
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.3.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.1" />
-    <PackageReference Include="WindowsAzure.Storage" Version="8.1.3" />
+    <PackageReference Include="WindowsAzure.Storage" Version="8.1.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.UserAdmin\LagoVista.UserAdmin.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Account\Repos\" />
   </ItemGroup>
 </Project>
