--- a/src/LagoVista.UserAdmin.Repos/LagoVista.UserAdmin.Repos.csproj
+++ b/src/LagoVista.UserAdmin.Repos/LagoVista.UserAdmin.Repos.csproj
@@ -1,18 +1,20 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.CloudStorage" Version="1.2.47-alpha1151" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.47-alpha1151" />
+    <Compile Remove="Account\**" />
+    <EmbeddedResource Remove="Account\**" />
+    <None Remove="Account\**" />
+  </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="LagoVista.CloudStorage" Version="1.2.47-alpha1610" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.47-alpha1610" />
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.3.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.1" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.1.4" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\LagoVista.UserAdmin\LagoVista.UserAdmin.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Account\Repos\" />
   </ItemGroup>
 </Project>
