--- a/src/LagoVista.UserAdmin.Repos/LagoVista.UserAdmin.Repos.csproj
+++ b/src/LagoVista.UserAdmin.Repos/LagoVista.UserAdmin.Repos.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
@@ -8,8 +8,8 @@
     <None Remove="Account\**" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.CloudStorage" Version="1.2.48-alpha1640" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.48-alpha1640" />
+    <PackageReference Include="LagoVista.CloudStorage" Version="1.2.49-alpha0527" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.49-alpha0527" />
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.3.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.1" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.1.4" />
