--- a/nuget.config
+++ b/nuget.config
@@ -3,13 +3,13 @@
   <packageSources>
     <!-- remove any machine-wide sources with <clear/> -->
     <clear />
-    <add key="Local Public" value="D:\nuviot\LocalPackages" />
     <add key="nuget.org" value="https://www.nuget.org/api/v2/" />
   </packageSources>
   <activePackageSource>
     <add key="All" value="(Aggregate source)" />
   </activePackageSource>
   <disabledPackageSources>
+    <add key="Microsoft and .NET" value="true" />
     <add key="VSTS Private Packages" value="true" />
   </disabledPackageSources>
 </configuration>
