--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -1,16 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.6</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.52-alpha1859" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.63-alpha1541" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.1" />
     <PackageReference Include="Twilio" Version="5.5.1-alpha1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
     <PackageReference Include="MailKit" Version="1.16.1" />
-    <PackageReference Include="LagoVista.Core" Version="1.2.52-alpha1859" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.52-alpha1859" />
+    <PackageReference Include="LagoVista.Core" Version="1.2.63-alpha1541" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.63-alpha1541" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.1.4" />
   </ItemGroup>
   <ItemGroup>
