--- a/src/LagoVista.UserAdmin.Repos.RDBMS/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Repos.RDBMS/Package.nuspec
@@ -10,15 +10,12 @@
     <projectUrl>http://www.lagovista-iot.com/opensource</projectUrl>
     <iconUrl>http://bytemaster.blob.core.windows.net/icons/LagoVistaIcon.png</iconUrl>
     <summary>User and Organizations primarily exist in NOSQL storage, however the headers for these records are helpful (and used for referential integrity) of relational DBs, so they are also stored there</summary>
-    <description>User, Organization and Location Management Models and API for LagoVista IoT, Devices and Home Automation Framework</description>
+    <description>User and Organizations primarily exist in NOSQL storage, however the headers for these records are helpful (and used for referential integrity) of relational DBs, so they are also stored there</description>
     <releaseNotes>Initial Unstable Release</releaseNotes>
     <copyright>Copyright 2017</copyright>
-    <tags>HomeAutomation IoT</tags>
-    <dependencies>
-    </dependencies>
+    <tags>HomeAutomation IoT Devices NuvIoT LagoVista</tags>
   </metadata>
   <files>
-    <file src="readme.txt" target="" />
-    <file src="bin\release\netstandard1.2\*.dll" target="lib\netstandard1.2" />
+    <file src="bin\release\netstandard1.4\*.dll" target="lib\netstandard1.4" />
   </files>
 </package>
