--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.63-alpha1541" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.1" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0-preview2-25405-01" />
     <PackageReference Include="Twilio" Version="5.5.1-alpha1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="1.1.2" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
