great dotnet core conversion of oct 2017

--- a/src/LagoVista.IoT.ProductStore/LagoVista.IoT.ProductStore.csproj
+++ b/src/LagoVista.IoT.ProductStore/LagoVista.IoT.ProductStore.csproj
@@ -1,5 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.2</TargetFramework>
+    <NetStandardImplicitPackageVersion>2.0.1</NetStandardImplicitPackageVersion>
   </PropertyGroup>
 </Project>
