--- a/src/LagoVista.AspNetCore.Identity/Package.nuspec
+++ b/src/LagoVista.AspNetCore.Identity/Package.nuspec
@@ -15,10 +15,10 @@
     <copyright>Copyright 2016</copyright>
     <tags>HomeAutomation IoT</tags>
     <dependencies>
-      <dependency id="Twilio" version="5.2.1-alpha1" />
+      <dependency id="Twilio" version="5.8.1" />
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\release\netstandard1.6\*.dll" target="lib\netstandard1.6" />
+    <file src="bin\release\netstandard2.0\*.dll" target="lib\netstandard2.0" />
   </files>
 </package>
