--- a/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
+++ b/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
@@ -1,12 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard1.2</TargetFramework>
+    <NetStandardImplicitPackageVersion>2.0.1</NetStandardImplicitPackageVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="LagoVista.Core" Version="1.2.163-alpha0901" />
     <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.163-alpha0901" />
     <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.163-alpha0901" />
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
   </ItemGroup>
   <ItemGroup>
