--- a/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
+++ b/src/LagoVista.AspNetCore.Identity/LagoVista.AspNetCore.Identity.csproj
@@ -8,8 +8,8 @@
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.0" />
     <PackageReference Include="Twilio" Version="5.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.0.1" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="MailKit" Version="1.20.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta1" />
+    <PackageReference Include="MailKit" Version="1.22.0" />
     <PackageReference Include="LagoVista.Core" Version="1.2.184-alpha1030" />
     <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.184-alpha1030" />
     <PackageReference Include="WindowsAzure.Storage" Version="8.6.0" />
