--- a/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
+++ b/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
@@ -7,7 +7,7 @@
     <PackageReference Include="LagoVista.Core" Version="1.2.184-alpha1030" />
     <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.184-alpha1030" />
     <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.184-alpha1030" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta1" />
   </ItemGroup>
   <ItemGroup>
     <None Update="T4ResourceGenerator.tt">
