--- a/src/LagoVista.IoT.ProductStore/LagoVista.IoT.ProductStore.csproj
+++ b/src/LagoVista.IoT.ProductStore/LagoVista.IoT.ProductStore.csproj
@@ -3,4 +3,7 @@
     <TargetFramework>netstandard1.2</TargetFramework>
     <NetStandardImplicitPackageVersion>2.0.1</NetStandardImplicitPackageVersion>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta1" />
+  </ItemGroup>
 </Project>
