--- a/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
+++ b/src/LagoVista.UserAdmin/LagoVista.UserAdmin.csproj
@@ -10,19 +10,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1-beta1" />
   </ItemGroup>
   <ItemGroup>
-    <None Update="T4ResourceGenerator.tt">
-      <Generator>TextTemplatingFileGenerator</Generator>
-      <LastGenOutput>T4ResourceGenerator.cs</LastGenOutput>
-    </None>
+    <ProjectReference Include="..\LagoVista.UserAdmin.Models\LagoVista.UserAdmin.Models.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Update="T4ResourceGenerator.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>T4ResourceGenerator.tt</DependentUpon>
-    </Compile>
   </ItemGroup>
 </Project>
