--- a/src/LagoVista.UserAdmin.Models/LagoVista.UserAdmin.Models.csproj
+++ b/src/LagoVista.UserAdmin.Models/LagoVista.UserAdmin.Models.csproj
@@ -4,9 +4,9 @@
     <NetStandardImplicitPackageVersion>2.0.1</NetStandardImplicitPackageVersion>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="1.2.334-alpha1220" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.334-alpha1220" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="1.2.334-alpha1220" />
+    <PackageReference Include="LagoVista.Core" Version="" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
   </ItemGroup>
   <ItemGroup>
