--- a/src/LagoVista.UserAdmin.Repos/LagoVista.UserAdmin.Repos.csproj
+++ b/src/LagoVista.UserAdmin.Repos/LagoVista.UserAdmin.Repos.csproj
@@ -9,8 +9,8 @@
     <None Remove="Account\**" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.CloudStorage" Version="1.2.334-alpha1220" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="1.2.334-alpha1220" />
+    <PackageReference Include="LagoVista.CloudStorage" Version="" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="" />
     <PackageReference Include="Microsoft.Azure.DocumentDB.Core" Version="1.9.1" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.1" />
     <PackageReference Include="WindowsAzure.Storage" Version="9.1.0" />
