--- a/src/LagoVista.IoT.ProductStore/Package.nuspec
+++ b/src/LagoVista.IoT.ProductStore/Package.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>LagoVista.IoT.ProductStore</id>
     <title>LagoVista ASP.NET Core Identity Provider</title>
-    <version>1.2.342-alpha1452</version>
+    <version>2.1.503-beta1710</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
