--- a/src/LagoVista.UserAdmin.Models/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Models/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>LagoVista.UserAdmin.Models</id>
-    <version>1.2.342-alpha1452</version>
+    <version>2.1.503-beta1710</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <title>LagoVista User Models</title>
