--- a/src/LagoVista.UserAdmin.Repos/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Repos/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>LagoVista.UserAdmin.Repos</id>
-    <version>2.1.615-beta1617</version>
+    <version>2.1.619-beta0217</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -17,6 +17,6 @@
   </metadata>
   <files>
     <file src="readme.txt" target="" />
-    <file src="bin\release\netstandard2.0\*.dll" target="lib\netstandard2.0" />
+    <file src="bin\release\netstandard2.0\LagoVista.UserAdmin.Repos.dll" target="lib\netstandard2.0" />
   </files>
 </package>
