--- a/src/LagoVista.UserAdmin.Models/LagoVista.UserAdmin.Models.csproj
+++ b/src/LagoVista.UserAdmin.Models/LagoVista.UserAdmin.Models.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
+    <TargetFramework>netstandard1.2</TargetFramework>
     <SignAssembly>true</SignAssembly>
     <AssemblyOriginatorKeyFile>LagoVista.Core.snk</AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="2.1.1433-beta1816" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1433-beta1816" />
-    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1433-beta1816" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1434.0352" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1434.0352" />
+    <PackageReference Include="LagoVista.Core.Authentication" Version="2.1.1434.0352" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
   <ItemGroup>
