--- a/src/LagoVista.UserAdmin.Repos.RDBMS/LagoVista.UserAdmin.Repos.RDBMS.csproj
+++ b/src/LagoVista.UserAdmin.Repos.RDBMS/LagoVista.UserAdmin.Repos.RDBMS.csproj
@@ -3,7 +3,7 @@
     <TargetFramework>netstandard2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="LagoVista.Core" Version="2.1.1433-beta1816" />
+    <PackageReference Include="LagoVista.Core" Version="2.1.1434.0352" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.5">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -11,7 +11,7 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="5.0.1" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
-    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1433-beta1816" />
+    <PackageReference Include="LagoVista.IoT.Logging" Version="2.1.1434.0352" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
   <ItemGroup>
