--- a/src/LagoVista.UserAdmin.Repos.RDBMS/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Repos.RDBMS/Package.nuspec
@@ -1,21 +1,37 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
     <id>LagoVista.UserAdmin.Repos.RDBMS</id>
-    <version>3.0.1959.1339</version>
+    <version>3.0.1963.1145</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <title>LagoVista Relational DB Repo for Orgs and Users</title>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <projectUrl>http://www.lagovista-iot.com/opensource</projectUrl>
+    <projectUrl>https://www.nuviot.com</projectUrl>
     <iconUrl>http://bytemaster.blob.core.windows.net/icons/LagoVistaIcon.png</iconUrl>
     <summary>User and Organizations primarily exist in NOSQL storage, however the headers for these records are helpful (and used for referential integrity) of relational DBs, so they are also stored there</summary>
     <description>User and Organizations primarily exist in NOSQL storage, however the headers for these records are helpful (and used for referential integrity) of relational DBs, so they are also stored there</description>
-    <releaseNotes>Initial Unstable Release</releaseNotes>
-    <copyright>Copyright 2017</copyright>
+    <copyright>Copyright Software Logistics - 2022</copyright>
     <tags>HomeAutomation IoT Devices NuvIoT LagoVista</tags>
+    <icon>LagoVistaIcon.png</icon>
+    <releaseNotes>Build Date: 10/1/2022 3:45:22 PM UTC</releaseNotes>
+    <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
+    <dependencies>
+      <group targetFramework="NET6.0">
+        <dependency id="LagoVista.Core" version="3.0.1963.1145" />
+        <dependency id="Microsoft.EntityFrameworkCore.Design" version="6.0.9" />
+        <dependency id="Microsoft.EntityFrameworkCore.SqlServer" version="6.0.9" />
+        <dependency id="Microsoft.Extensions.DependencyInjection" version="6.0.0" />
+        <dependency id="System.Data.SqlClient" version="4.8.3" />
+        <dependency id="LagoVista.IoT.Logging" version="3.0.1963.1145" />
+        <dependency id="Newtonsoft.Json" version="13.0.1" />
+        <dependency id="LagoVista.UserAdmin" version="3.0.1963.1145" />
+      </group>
+    </dependencies>
   </metadata>
   <files>
-    <file src="bin\release\netstandard2.1\*.dll" target="lib\netstandard2.1" />
+    <file src="LagoVistaIcon.png" target="LagoVistaIcon.png" />
+    <file src="bin\release\NET6.0\LagoVista.UserAdmin.Repos.RDBMS.dll" target="lib\NET6.0\LagoVista.UserAdmin.Repos.RDBMS.dll" />
+    <file src="bin\release\NET6.0\LagoVista.UserAdmin.Repos.RDBMS.pdb" target="lib\NET6.0\LagoVista.UserAdmin.Repos.RDBMS.pdb" />
   </files>
 </package>
