--- a/src/LagoVista.UserAdmin.Repos/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Repos/Package.nuspec
@@ -1,22 +1,29 @@
-<?xml version="1.0"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <package>
   <metadata>
     <id>LagoVista.UserAdmin.Repos</id>
-    <version>3.0.1959.1339</version>
+    <version>3.0.1963.1145</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <projectUrl>http://www.lagovista-iot.com/opensource</projectUrl>
+    <projectUrl>https://www.nuviot.com</projectUrl>
     <iconUrl>http://bytemaster.blob.core.windows.net/icons/LagoVistaIcon.png</iconUrl>
     <description>User, Organization and Location Management API for LagoVista IoT and Device Framework</description>
-    <releaseNotes>Initial Unstable Release</releaseNotes>
-    <copyright>Copyright 2016</copyright>
+    <copyright>Copyright Software Logistics - 2022</copyright>
     <tags>HomeAutomation IoT</tags>
+    <icon>LagoVistaIcon.png</icon>
+    <releaseNotes>Build Date: 10/1/2022 3:45:22 PM UTC</releaseNotes>
+    <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
+      <group targetFramework="netstandard2.1">
+        <dependency id="LagoVista.CloudStorage" version="3.0.1963.1145" />
+        <dependency id="LagoVista.UserAdmin" version="3.0.1963.1145" />
+      </group>
     </dependencies>
   </metadata>
   <files>
-    <file src="readme.txt" target="" />
-    <file src="bin\release\netstandard2.1\LagoVista.UserAdmin.Repos.dll" target="lib\netstandard2.1" />
+    <file src="LagoVistaIcon.png" target="LagoVistaIcon.png" />
+    <file src="bin\release\netstandard2.1\LagoVista.UserAdmin.Repos.dll" target="lib\netstandard2.1\LagoVista.UserAdmin.Repos.dll" />
+    <file src="bin\release\netstandard2.1\LagoVista.UserAdmin.Repos.pdb" target="lib\netstandard2.1\LagoVista.UserAdmin.Repos.pdb" />
   </files>
 </package>
