--- a/src/LagoVista.UserAdmin.Repos/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Repos/Package.nuspec
@@ -2,22 +2,22 @@
 <package>
   <metadata>
     <id>LagoVista.UserAdmin.Repos</id>
-    <version>3.0.2048.0648</version>
+    <version>3.0.2999.0900</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <projectUrl>https://www.nuviot.com</projectUrl>
     <iconUrl>http://bytemaster.blob.core.windows.net/icons/LagoVistaIcon.png</iconUrl>
     <description>User, Organization and Location Management API for LagoVista IoT and Device Framework</description>
-    <copyright>Copyright Software Logistics - 2022</copyright>
+    <copyright>Copyright Software Logistics - 2025</copyright>
     <tags>HomeAutomation IoT</tags>
     <icon>LagoVistaIcon.png</icon>
-    <releaseNotes>Build Date: 12/25/2022 11:48:01 AM UTC</releaseNotes>
+    <releaseNotes>Build Date: 8/2/2025 1:00:33 PM UTC</releaseNotes>
     <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
       <group targetFramework="netstandard2.1">
-        <dependency id="LagoVista.CloudStorage" version="3.0.2048.0520" />
-        <dependency id="LagoVista.UserAdmin" version="3.0.2048.0648" />
+        <dependency id="LagoVista.CloudStorage" version="3.0.2999.0900" />
+        <dependency id="LagoVista.UserAdmin" version="3.0.2999.0900" />
       </group>
     </dependencies>
   </metadata>
