--- a/src/LagoVista.AspNetCore.Identity/Package.nuspec
+++ b/src/LagoVista.AspNetCore.Identity/Package.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>LagoVista.AspNetCore.Identity</id>
     <title>LagoVista ASP.NET Core Identity Provider</title>
-    <version>3.0.2048.0648</version>
+    <version>3.0.2999.0900</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -11,23 +11,23 @@
     <iconUrl>http://bytemaster.blob.core.windows.net/icons/LagoVistaIcon.png</iconUrl>
     <description>ASP.NET Core Identity Provider with DocumentDB and Table Storage backend for LagoVista IoT, Devices and Home Automation Frameworks</description>
     <summary>ASP.NET Core Identity Provider with DocumentDB and Table Storage backend for LagoVista IoT, Devices and Home Automation Frameworks</summary>
-    <copyright>Copyright Software Logistics - 2022</copyright>
+    <copyright>Copyright Software Logistics - 2025</copyright>
     <tags>HomeAutomation IoT</tags>
     <icon>LagoVistaIcon.png</icon>
-    <releaseNotes>Build Date: 12/25/2022 11:48:01 AM UTC</releaseNotes>
+    <releaseNotes>Build Date: 8/2/2025 1:00:33 PM UTC</releaseNotes>
     <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
       <group targetFramework="net6.0">
-        <dependency id="LagoVista.IoT.Logging" version="3.0.2048.0520" />
-        <dependency id="SendGrid" version="9.28.1" />
+        <dependency id="LagoVista.IoT.Logging" version="3.0.2999.0900" />
+        <dependency id="SendGrid" version="9.29.2" />
         <dependency id="System.ComponentModel.Annotations" version="5.0.0" />
         <dependency id="Twilio" version="5.80.0" />
         <dependency id="Newtonsoft.Json" version="13.0.1" />
-        <dependency id="LagoVista.Core" version="3.0.2048.0520" />
+        <dependency id="LagoVista.Core" version="3.0.2999.0900" />
         <dependency id="Microsoft.AspNetCore.Authentication.Twitter" version="6.0.9" />
-        <dependency id="LagoVista.Core.Authentication" version="3.0.2048.0520" />
+        <dependency id="LagoVista.Core.Authentication" version="3.0.2999.0900" />
         <dependency id="prometheus-net" version="6.0.0" />
-        <dependency id="LagoVista.UserAdmin" version="3.0.2048.0648" />
+        <dependency id="LagoVista.UserAdmin" version="3.0.2999.0900" />
       </group>
     </dependencies>
   </metadata>
