--- a/src/LagoVista.UserAdmin.Models/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Models/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>LagoVista.UserAdmin.Models</id>
-    <version>3.0.2048.0648</version>
+    <version>3.0.2999.0900</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <title>LagoVista User Models</title>
@@ -11,16 +11,16 @@
     <iconUrl>http://bytemaster.blob.core.windows.net/icons/LagoVistaIcon.png</iconUrl>
     <summary>User, Organization and Location Models for the LagoVista IoT, Devices and Home Automation Framework</summary>
     <description>User, Organization and Location Models for LagoVista IoT, Devices and Home Automation Framework</description>
-    <copyright>Copyright Software Logistics - 2022</copyright>
+    <copyright>Copyright Software Logistics - 2025</copyright>
     <tags>HomeAutomation IoT Devices NuvIoT LagoVista</tags>
     <icon>LagoVistaIcon.png</icon>
-    <releaseNotes>Build Date: 12/25/2022 11:48:01 AM UTC</releaseNotes>
+    <releaseNotes>Build Date: 8/2/2025 1:00:33 PM UTC</releaseNotes>
     <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
       <group targetFramework="netstandard2.1">
-        <dependency id="LagoVista.Core" version="3.0.2048.0520" />
-        <dependency id="LagoVista.IoT.Logging" version="3.0.2048.0520" />
-        <dependency id="LagoVista.Core.Authentication" version="3.0.2048.0520" />
+        <dependency id="LagoVista.Core" version="3.0.2999.0900" />
+        <dependency id="LagoVista.IoT.Logging" version="3.0.2999.0900" />
+        <dependency id="LagoVista.Core.Authentication" version="3.0.2999.0900" />
       </group>
     </dependencies>
   </metadata>
