--- a/src/LagoVista.UserAdmin.Repos.RDBMS/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Repos.RDBMS/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>LagoVista.UserAdmin.Repos.RDBMS</id>
-    <version>3.0.2048.0648</version>
+    <version>3.0.2999.0900</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <title>LagoVista Relational DB Repo for Orgs and Users</title>
@@ -11,18 +11,18 @@
     <iconUrl>http://bytemaster.blob.core.windows.net/icons/LagoVistaIcon.png</iconUrl>
     <summary>User and Organizations primarily exist in NOSQL storage, however the headers for these records are helpful (and used for referential integrity) of relational DBs, so they are also stored there</summary>
     <description>User and Organizations primarily exist in NOSQL storage, however the headers for these records are helpful (and used for referential integrity) of relational DBs, so they are also stored there</description>
-    <copyright>Copyright Software Logistics - 2022</copyright>
+    <copyright>Copyright Software Logistics - 2025</copyright>
     <tags>HomeAutomation IoT Devices NuvIoT LagoVista</tags>
     <icon>LagoVistaIcon.png</icon>
-    <releaseNotes>Build Date: 12/25/2022 11:48:01 AM UTC</releaseNotes>
+    <releaseNotes>Build Date: 8/2/2025 1:00:33 PM UTC</releaseNotes>
     <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
       <group targetFramework="NET6.0">
-        <dependency id="Microsoft.Data.SqlClient" version="5.0.0" />
         <dependency id="Microsoft.EntityFrameworkCore.Design" version="6.0.9" />
         <dependency id="Microsoft.EntityFrameworkCore.SqlServer" version="6.0.9" />
-        <dependency id="Microsoft.Extensions.DependencyInjection" version="6.0.0" />
-        <dependency id="LagoVista.UserAdmin" version="3.0.2048.0648" />
+        <dependency id="Microsoft.Extensions.Logging.Console" version="6.0.0" />
+        <dependency id="Npgsql.EntityFrameworkCore.PostgreSQL" version="6.0.8" />
+        <dependency id="LagoVista.UserAdmin" version="3.0.2999.0900" />
       </group>
     </dependencies>
   </metadata>
