--- a/src/LagoVista.IoT.ProductStore/Package.nuspec
+++ b/src/LagoVista.IoT.ProductStore/Package.nuspec
@@ -3,7 +3,7 @@
   <metadata>
     <id>LagoVista.IoT.ProductStore</id>
     <title>LagoVista ASP.NET Core Identity Provider</title>
-    <version>3.0.2999.0900</version>
+    <version>3.0.3000.0708</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -14,7 +14,7 @@
     <copyright>Copyright Software Logistics - 2025</copyright>
     <tags>HomeAutomation IoT</tags>
     <icon>LagoVistaIcon.png</icon>
-    <releaseNotes>Build Date: 8/2/2025 1:00:33 PM UTC</releaseNotes>
+    <releaseNotes>Build Date: 8/3/2025 11:08:28 AM UTC</releaseNotes>
     <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
       <group targetFramework="netstandard2.1" />
