--- a/src/LagoVista.UserAdmin.Models/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Models/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>LagoVista.UserAdmin.Models</id>
-    <version>3.0.2999.0900</version>
+    <version>3.0.3000.0708</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <title>LagoVista User Models</title>
@@ -14,13 +14,13 @@
     <copyright>Copyright Software Logistics - 2025</copyright>
     <tags>HomeAutomation IoT Devices NuvIoT LagoVista</tags>
     <icon>LagoVistaIcon.png</icon>
-    <releaseNotes>Build Date: 8/2/2025 1:00:33 PM UTC</releaseNotes>
+    <releaseNotes>Build Date: 8/3/2025 11:08:28 AM UTC</releaseNotes>
     <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
       <group targetFramework="netstandard2.1">
-        <dependency id="LagoVista.Core" version="3.0.2999.0900" />
-        <dependency id="LagoVista.IoT.Logging" version="3.0.2999.0900" />
-        <dependency id="LagoVista.Core.Authentication" version="3.0.2999.0900" />
+        <dependency id="LagoVista.Core" version="3.0.3000.0708" />
+        <dependency id="LagoVista.IoT.Logging" version="3.0.3000.0708" />
+        <dependency id="LagoVista.Core.Authentication" version="3.0.3000.0708" />
       </group>
     </dependencies>
   </metadata>
