--- a/src/LagoVista.UserAdmin.Repos/Package.nuspec
+++ b/src/LagoVista.UserAdmin.Repos/Package.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>LagoVista.UserAdmin.Repos</id>
-    <version>3.0.2999.0900</version>
+    <version>3.0.3000.0708</version>
     <authors>Software Logistics, LLC</authors>
     <owners>Software Logistics, LLC</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
@@ -12,12 +12,12 @@
     <copyright>Copyright Software Logistics - 2025</copyright>
     <tags>HomeAutomation IoT</tags>
     <icon>LagoVistaIcon.png</icon>
-    <releaseNotes>Build Date: 8/2/2025 1:00:33 PM UTC</releaseNotes>
+    <releaseNotes>Build Date: 8/3/2025 11:08:28 AM UTC</releaseNotes>
     <repository url="https://www.github.com/lagovista" type="git" branch="master"></repository>
     <dependencies>
       <group targetFramework="netstandard2.1">
-        <dependency id="LagoVista.CloudStorage" version="3.0.2999.0900" />
-        <dependency id="LagoVista.UserAdmin" version="3.0.2999.0900" />
+        <dependency id="LagoVista.CloudStorage" version="3.0.3000.0708" />
+        <dependency id="LagoVista.UserAdmin" version="3.0.3000.0708" />
       </group>
     </dependencies>
   </metadata>
